crates/pg_syntax/tests/snapshots/postgres_regress/tid@23.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT currtid2('tid_part'::text, '(0,1)'::tid);"
---
SelectStmt@0..48
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..46
    FuncCall@7..46
      Ident@7..15 "currtid2"
      Ascii40@15..16 "("
      TypeCast@16..32
        AConst@16..26
          Sconst@16..26 "'tid_part'"
        Typecast@26..28 "::"
        TypeName@28..32
          TextP@28..32 "text"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      TypeCast@34..46
        AConst@34..41
          Sconst@34..41 "'(0,1)'"
        Typecast@41..43 "::"
        TypeName@43..46
          Ident@43..46 "tid"
  Ascii41@46..47 ")"
  Ascii59@47..48 ";"

