crates/pg_syntax/tests/snapshots/postgres_regress/tid@6.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT min(ctid) FROM tid_tab;
---
SelectStmt@0..30
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..15
    FuncCall@7..15
      Ident@7..10 "min"
      Ascii40@10..11 "("
      ColumnRef@11..15
        Ident@11..15 "ctid"
  Ascii41@15..16 ")"
  Whitespace@16..17 " "
  From@17..21 "FROM"
  Whitespace@21..22 " "
  RangeVar@22..29
    Ident@22..29 "tid_tab"
  Ascii59@29..30 ";"

