crates/pg_syntax/tests/snapshots/postgres_regress/tid@8.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: TRUNCATE tid_tab;
---
TruncateStmt@0..17
  Truncate@0..8 "TRUNCATE"
  Whitespace@8..9 " "
  RangeVar@9..16
    Ident@9..16 "tid_tab"
  Ascii59@16..17 ";"

