crates/pg_syntax/tests/snapshots/postgres_regress/tidrangescan@17.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ctid FROM tidrangescan WHERE ctid > '(2,8)';"
---
SelectStmt@0..51
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..11 "ctid"
  Whitespace@11..12 " "
  From@12..16 "FROM"
  Whitespace@16..17 " "
  RangeVar@17..29
    Ident@17..29 "tidrangescan"
  Whitespace@29..30 " "
  Where@30..35 "WHERE"
  Whitespace@35..36 " "
  AExpr@36..50
    ColumnRef@36..40
      Ident@36..40 "ctid"
    Whitespace@40..41 " "
    Ascii62@41..42 ">"
    Whitespace@42..43 " "
    AConst@43..50
      Sconst@43..50 "'(2,8)'"
  Ascii59@50..51 ";"

